--- a/EFC2.0/Pages/Organization/Onboarding/candidate_view.cshtml
+++ b/EFC2.0/Pages/Organization/Onboarding/candidate_view.cshtml
@@ -9,7 +9,7 @@
             <div class="child-content nav-active-top" id="org-structure">
                 <ul class="topnav-child-1">
                     <li class="nav-active-top"><a href="/organization/onboarding/candidate_view"> Candidates</a> </li>
-                    <li><a href="/organization/onboarding/outsourcing_employee"> Outsources</a> </li>
+                    <li><a href="/organization/onboarding/all_requisition"> Requisitions</a> </li>
                 </ul>
                 <div class="container-fluid p-3">
                     <div class="grand-child nav-active-top">
@@ -29,7 +29,7 @@
                                         </div>
                                         <button type="button" class="mat-ripple p-element rd-round-button ng-star-inserted" tabindex="0"><img src="/images/upload_file.svg"></button>
                                         <div class="btn-group">
-                                            <button type="button" class="mat-ripple p-element rd-round-button ng-star-inserted dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><img src="/images/add.svg"></button>
+                                            <button type="button" class="mat-ripple p-element rd-round-button ng-star-inserted dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><img src="/images/add.svg" alt="Add" alt="Add"></button>
                                             <ul class="dropdown-menu">
                                                 <li><a onclick="addCandidate()">New Candidate</a></li>
                                                 <li><a onclick="addBulkCandidateViaMail()">Bulk Candidate via mail</a></li>
@@ -56,10 +56,10 @@
                                                             <td class="mat-cell cdk-cell">Tom  Holland</td>
                                                             <td class="mat-cell cdk-cell">tom.holland@clientdbin.com</td>
                                                             <td class="mat-cell cdk-cel text-center"><span class="badge rounded-pill text-bg-warning">In Progress</span></td>
-                                                            <td class="mat-cell cdk-cel text-center"><img src="/images/mail.svg" alt="Mail" class="img-fluid" width="26" /></td>
+                                                            <td class="mat-cell cdk-cel text-center"><img src="/images/mail.svg" alt="Mail" title="Mail" class="img-fluid" width="26" /></td>
                                                             <td class="mat-cell cdk-cell text-center">-</td>
                                                             <td class="mat-cell cdk-cell">
-                                                                <img src="/images/edit1.svg" alt="Edit" title="Edit" width="16" class="img-fluid me-2">
+                                                                <img src="/images/edit1.svg" alt="Edit" title="Edit" width="16" class="img-fluid me-2" onclick="addCandidate()">
                                                                 <img src="/images/trash.svg" alt="Delete" title="Delete" width="16" class="img-fluid">
                                                             </td>
                                                         </tr>
@@ -67,10 +67,10 @@
                                                             <td class="mat-cell cdk-cell">Tom  Holland</td>
                                                             <td class="mat-cell cdk-cell">tom.holland@clientdbin.com</td>
                                                             <td class="mat-cell cdk-cel text-center"><span class="badge rounded-pill text-bg-warning">In Progress</span></td>
-                                                            <td class="mat-cell cdk-cel text-center"><img src="/images/mail.svg" alt="Mail" class="img-fluid" width="26" /></td>
+                                                            <td class="mat-cell cdk-cel text-center"><img src="/images/mail.svg" alt="Mail" title="Mail" class="img-fluid" width="26" /></td>
                                                             <td class="mat-cell cdk-cell text-center">-</td>
                                                             <td class="mat-cell cdk-cell">
-                                                                <img src="/images/edit1.svg" alt="Edit" title="Edit" width="16px" class="img-fluid me-2">
+                                                                <img src="/images/edit1.svg" alt="Edit" title="Edit" width="16px" class="img-fluid me-2" onclick="addCandidate()">
                                                                 <img src="/images/trash.svg" alt="Delete" title="Delete" width="16px" class="img-fluid">
                                                             </td>
                                                         </tr>
@@ -323,6 +323,61 @@
                                     </div>
                                 </div>
                             </mat-card>
+                        </div>
+                        <div id="addCandidateOnboard" class="ng-star-inserted">
+                            <div class="page-title-h">
+                                <div class="d-flex justify-content-start align-items-center">
+                                    <mat-icon role="img" class="mat-icon notranslate text-muted material-icons mat-icon-no-color" style="cursor: pointer;" onclick="backToCanDetails()">chevron_left </mat-icon>
+                                    <h4 class="card-title m-0 card-heading">Candidate Onboard</h4>
+                                </div>
+                            </div>
+                            <mat-card class="mat-card mat-focus-indicator b-shadow-none border-0">
+                                <div class="mainContentHeightOrg2">
+                                    <div class="container-fluid">
+                                        <mat-card class="mat-card mat-focus-indicator my-2 commts ng-untouched ng-invalid ng-star-inserted ng-dirty">
+                                            <div class="row">
+                                                <h4 class="card-title mb-4 card-heading">Candidate 1 :</h4>
+                                                <div class="col-md-4 rd-form-select my-1">
+                                                    <label class="rd-form-select-label mb-1">First Name*</label>
+                                                    <input type="text" class="form-control" placeholder="Enter First Name" />
+                                                </div>
+                                                <div class="col-md-4 rd-form-select my-1">
+                                                    <label class="rd-form-select-label mb-1">Last Name*</label>
+                                                    <input type="text" class="form-control" placeholder="Enter Last Name" />
+                                                </div>
+                                                <div class="col-md-4 rd-form-select my-1">
+                                                    <label class="rd-form-select-label mb-1">Email*</label>
+                                                    <input type="email" class="form-control" placeholder="Enter Personal Email" />
+                                                </div>
+                                                <div class="col-md-4 rd-form-select my-1">
+                                                    <label class="rd-form-select-label mb-1">Work Location</label>
+                                                    <select class="form-select" placeholder="Select Work Location">
+                                                        <option selected>Select Employee Status</option>
+                                                        <option value="1">1</option>
+                                                    </select>
+                                                </div>
+                                                <div class="col-md-4 rd-form-select my-1">
+                                                    <label class="rd-form-select-label mb-1">
+                                                        Onboarding Group
+                                                    </label>
+                                                    <select class="form-select" placeholder="Select Onboarding Group">
+                                                        <option selected>Select Country</option>
+                                                        <option value="1">1</option>
+                                                    </select>
+                                                </div>
+                                                <div class="col-md-4 rd-form-select my-1">
+                                                    <label class="rd-form-select-label mb-1">Date of Join*</label>
+                                                    <input type="date" class="form-control" placeholder="Date of Join" />
+                                                </div>
+                                            </div>
+                                        </mat-card>
+                                        <div class="text-end mt-3">
+                                            <button type="submit" color="primary" class="rd-btn-primary-sm" style="width:200px;font-size: 14px;">
+                                                Trigger Email
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
                         </div>
                     </div>
                 </div>
