--- a/EFC2.0/Pages/Shared/Organization_Tabs.cshtml
+++ b/EFC2.0/Pages/Shared/Organization_Tabs.cshtml
@@ -6,11 +6,11 @@
     <li><a href="/organization/org_employees/employee_view" data-target="employees">Employees</a></li>
     <li><a href="/organization/org_structure/legal_entities" data-target="org-structure">Organization Structure</a></li>
     <li><a href="/organization/onboarding/candidate_view" data-target="onboarding">Onboarding</a></li>
-    <li><a data-target="exit" data-link="/exit">Exit</a></li>
-    <li><a data-target="help-desk" data-link="/help-desk">Help Desk</a></li>
-    <li><a data-target="documents" data-link="/documents">Documents</a></li>
-    <li><a data-target="announcements" data-link="/announcements">Announcements</a></li>
-    <li><a data-target="assets" data-link="/assets">Assets</a></li>
-    <li><a data-target="survey" data-link="/survey">Employee Pulse Survey</a></li>
-    <li><a data-target="settings" data-link="/settings">Settings</a></li>
+    <li><a href="/organization/org_exit/notice_period" data-target="exit">Exit</a></li>
+    <li><a href="/organization/help_desk/help_summary" data-target="help-desk">Help Desk</a></li>
+    <li><a href="/organization/org_documents/letters" data-target="documents">Documents</a></li>
+    <li><a href="/organization/announcements/announcementslist" data-target="announcements">Announcements</a></li>
+    <li><a href="/organization/assets" data-target="assets">Assets</a></li>
+    <li><a href="/organization/survey" data-target="survey">Employee Pulse Survey</a></li>
+    <li><a href="/organization/settings" data-target="settings">Settings</a></li>
 </ul>
