--- a/EFC2.0/Pages/Organization/help_desk/question_view.cshtml
+++ b/EFC2.0/Pages/Organization/help_desk/question_view.cshtml
@@ -6,30 +6,54 @@
     <div class="container-fluid px-0 main-content-page h-100">
         <partial name="Organization_Tabs" />
         <div class="aos-init aos-animate">
-            <div class="child-content nav-active-top" id="org-structure">
+            <div class="child-content nav-active-top" id="summary">
                 <ul class="topnav-child-1">
-                    <li><a href="/organization/onboarding/candidate_view"> Candidates</a> </li>
-                    <li class="nav-active-top"><a href="/organization/onboarding/outsourcing_employee"> Outsources</a> </li>
+                    <li><a href="/organization/help_desk/help_summary"> Summary</a> </li>
+                    <li><a href="/organization/help_desk/question_category_view"> Categories</a> </li>
+                    <li class="nav-active-top"><a href="/organization/help_desk/question_view"> Grievance</a> </li>
+                    <li><a href="/organization/help_desk/help_tickets"> Tickets</a></li>
+                    <li><a href="/organization/help_desk/close_reason"> Close Reasons</a></li>
+                    <li><a href="/organization/help_desk/KnowledgeBase"> Knowledge Base</a></li>
+                    <li><a href="/organization/help_desk/sla"> SLA Config</a></li>
+                    <li><a href="/organization/help_desk/team"> Help-Desk Team</a></li>
                 </ul>
                 <div class="container-fluid p-3">
                     <div class="grand-child nav-active-top">
-                        <div id="employeeDetailPage" class="ng-star-inserted">
+                        <div id="NoticePeriodDetailPage" class="ng-star-inserted">
                             <div class="page-title-h">
                                 <div class="d-flex justify-content-start align-items-center">
                                     <mat-icon role="img" class="mat-icon notranslate text-muted material-icons mat-icon-no-color" style="cursor: pointer;">chevron_left </mat-icon>
-                                    <h4 class="card-title m-0 card-heading">Outsources</h4>
+                                    <h4 class="card-title m-0 card-heading">Types of Grievance</h4>
                                 </div>
                             </div>
                             <mat-card class="mat-card mat-focus-indicator b-shadow-none border-0">
-                                <div class="container-fluid py-2">
-                                    <div class="d-flex justify-content-end tabcol mb-1">
-                                        <div style="position: relative;">
-                                            <input type="text" class="grid-search-box" placeholder="Search" fdprocessedid="xdmbl">
-                                            <mat-icon role="img" class="mat-icon notranslate search-icon material-icons mat-icon-no-color">search</mat-icon>
+                                <div class="container-fluid py-0">
+                                    <div class="row align-items-end  justify-content-between">
+                                        <div class="col-md-5 tab-col-width2">
+                                            <div class="row align-items-end">
+                                                <div class="col-md-8 tab-col-width2">
+                                                    <label class="rd-form-select-label mb-1">Grievance Category</label>
+                                                    <select class="form-select" fdprocessedid="vei0pn">
+                                                        <option selected>Select Grievance Category</option>
+                                                        <option value="">Select Status</option>
+                                                        <option value="">Select Status</option>
+                                                        <option value="">Select Status</option>
+                                                    </select>
+                                                </div>
+                                                <div class="col-md-4 tab-col-width2">
+                                                    <button type="button" class="rd-btn-tertairy-sm rd-text-secondary-1" fdprocessedid="xgydxp">Reset</button>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <button type="button" class="mat-ripple p-element rd-round-button ng-star-inserted" tabindex="0"><img src="/images/upload_file.svg"></button>
-                                        <button data-bs-toggle="modal" data-bs-target="#addProbationModal" type="button" class="mat-ripple p-element rd-round-button ng-star-inserted" onclick="addEmployee()" fdprocessedid="jx8e7"><img src="/images/add.svg"></button>
-                                        <button type="button" ptooltip="Download" tooltipposition="top" class="mat-ripple p-element mat-menu-trigger rd-round-button" fdprocessedid="g20k8k"><img src="/images/download.svg"></button>
+                                        <div class="col-md-3 d-flex justify-content-end align-items-center tabcol mb-1">
+                                            <div style="position: relative;">
+                                                <input type="text" class="grid-search-box" placeholder="Search" fdprocessedid="d4j0ak">
+                                                <mat-icon role="img" class="mat-icon notranslate search-icon material-icons mat-icon-no-color">search</mat-icon>
+                                            </div>
+                                            <button type="button" class="mat-ripple p-element rd-round-button ng-star-inserted" tabindex="0" fdprocessedid="pkdnq"><img src="/images/upload_file.svg"></button>
+                                            <button data-bs-toggle="modal" data-bs-target="#addGrievanceModal" type="button" class="mat-ripple p-element rd-round-button ng-star-inserted" fdprocessedid="cim4y7"><img src="/images/add.svg"></button>
+                                            <button type="button" ptooltip="Download" tooltipposition="top" class="mat-ripple p-element mat-menu-trigger rd-round-button" fdprocessedid="k54v6"><img src="/images/download.svg"></button>
+                                        </div>
                                     </div>
                                     <div class="col-12 px-0">
                                         <div class="ng-star-inserted">
@@ -37,35 +61,28 @@
                                                 <table class="mat-table cdk-table">
                                                     <thead role="rowgroup">
                                                         <tr class="mat-header-row cdk-header-row ng-star-inserted">
-                                                            <th class="mat-header-cell cdk-header-cell">Name</th>
-                                                            <th class="mat-header-cell cdk-header-cell">Address</th>
-                                                            <th class="mat-header-cell cdk-header-cell">City</th>
-                                                            <th class="mat-header-cell cdk-header-cell">State</th>
-                                                            <th class="mat-header-cell cdk-header-cell">Country</th>
+                                                            <th class="mat-header-cell cdk-header-cell">Grievance Category</th>
+                                                            <th class="mat-header-cell cdk-header-cell">Grievance</th>
                                                             <th class="mat-header-cell cdk-header-cell"> Actions </th>
                                                         </tr>
                                                     </thead>
                                                     <tbody role="rowgroup">
                                                         <tr class="mat-row cdk-row ng-star-inserted">
-                                                            <td class="mat-cell cdk-cell">Career Ultra</td>
-                                                            <td class="mat-cell cdk-cell">Mind Comp Tech Park 4.3 (1.4T) · Technology park Export Promotion Industrial Park 3 Mind Comp Tech Park, 149</td>
-                                                            <td class="mat-cell cdk-cel">Liverpool</td>
-                                                            <td class="mat-cell cdk-cel">New South Wales</td>
-                                                            <td class="mat-cell cdk-cel">Australia</td>
+                                                            <td class="mat-cell cdk-cell">Laptop</td>
+                                                            <td class="mat-cell cdk-cell">Laptop Blue Screen</td>
                                                             <td class="mat-cell cdk-cell">
-                                                                <img src="/images/edit1.svg" alt="Edit" title="Edit" width="16px" class="img-fluid me-2">
-                                                                <img src="/images/trash.svg" alt="Delete" title="Delete" width="16px" class="img-fluid">
+                                                                <img src="/images/edit1.svg" alt="Edit" title="Edit" class="img-fluid me-2" data-bs-toggle="modal" data-bs-target="#addGrievanceModal">
+                                                                <img src="/images/trash.svg" alt="Delete" title="Delete" class="img-fluid">
                                                             </td>
                                                         </tr>
                                                         <tr class="mat-row cdk-row ng-star-inserted">
-                                                            <td class="mat-cell cdk-cell">Career Ultra</td>
-                                                            <td class="mat-cell cdk-cell">Mind Comp Tech Park 4.3 (1.4T) · Technology park Export Promotion Industrial Park 3 Mind Comp Tech Park, 149</td>
-                                                            <td class="mat-cell cdk-cel">Liverpool</td>
-                                                            <td class="mat-cell cdk-cel">New South Wales</td>
-                                                            <td class="mat-cell cdk-cel">Australia</td>
+                                                            <td class="mat-cell cdk-cell">Payroll and Compensation</td>
                                                             <td class="mat-cell cdk-cell">
-                                                                <img src="/images/edit1.svg" alt="Edit" title="Edit" width="16px" class="img-fluid me-2">
-                                                                <img src="/images/trash.svg" alt="Delete" title="Delete" width="16px" class="img-fluid">
+                                                                OverTimePay Calculation
+                                                            </td>
+                                                            <td class="mat-cell cdk-cell">
+                                                                <img src="/images/edit1.svg" alt="Edit" title="Edit" class="img-fluid me-2" data-bs-toggle="modal" data-bs-target="#addGrievanceModal">
+                                                                <img src="/images/trash.svg" alt="Delete" title="Delete" class="img-fluid">
                                                             </td>
                                                         </tr>
                                                     </tbody>
@@ -149,6 +166,29 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="addGrievanceModal">
+    <div class="modal-dialog efcModal">
+        <div class="modal-content">
+            <div class="rd-dialog-heading p-0">Add Grievance</div>
+            <div class="row">
+                <div class="col-md-12 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Grievance *</label>
+                    <input type="text" class="form-control" placeholder="Enter Grievance" />
+                </div>
+                <div class="col-md-12 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Grievance Category *</label>
+                    <select class="form-select">
+                        <option>Select Category</option>
+                    </select>
+                </div>
+            </div>
+            <div class="modal-footer mt-2">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </div>
