--- a/EFC2.0/wwwroot/css/organization.css
+++ b/EFC2.0/wwwroot/css/organization.css
@@ -1054,9 +1054,6 @@ button.menuClick {
 .formButtons button.btn-primary {
     background-color: #325080;
 }
-.ck.ck-content {
-    height: 400px;
-}
 .historyTabs .tabs {
     background: #fff;
     background-color: #fff;
@@ -1111,3 +1108,93 @@ ul.dropdown-menu {
         ul.dropdown-menu li a:hover {
             background-color: #f4f4f4;
         }
+h3.subTitle {
+    font-size: 16px !important;
+    font-weight: 700 !important;
+    margin-bottom: 20px;
+}
+
+.ck-editor__editable {
+    min-height: 200px;
+    font-size: 13px;
+    font-weight:400;
+}
+
+.ck-editor {
+    width: 100%;
+}
+.mat-row .mat-cell {
+    padding: 4px 16px;
+    font-weight: 400;
+    line-height: 38px;
+}
+.rd-card {
+    border-radius: 4px;
+    border: 0;
+    background: #FFF;
+}
+a.canvasjs-chart-credit {
+    display: none;
+}
+.radioButtonGroups {
+    margin: 15px 0 0;
+    display: inline-block;
+}
+.radioButtonGroups .button {
+    float: left;
+    margin: 0;
+    width: 100px;
+    height: 36px;
+    padding: 8px 12px;
+    border-radius: 6px;
+    cursor:pointer;
+    position: relative;
+    background: #ffffff;
+    border: 1px solid #ced4da;
+    color: #495057;
+    transition: background-color .2s, color .2s, border-color .2s, box-shadow .2s;
+}
+.radioButtonGroups .button:not(:first-of-type):not(:last-of-type) {
+    border-radius: 0;
+    border-left: 0;
+    border-right: 0;
+}
+.radioButtonGroups .button:first-of-type {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.radioButtonGroups .button:last-of-type {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+.radioButtonGroups .button label, .radioButtonGroups .button input {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+.radioButtonGroups .button input[type="radio"] {
+    opacity: 0.011;
+    z-index: 100;
+}
+.radioButtonGroups .button label {
+    cursor: pointer;
+    z-index: 90;
+    line-height: 20px;
+    font-size: 12px;
+}
+.radioButtonGroups .button input[type="radio"]:checked + label {
+    background: #EEF4FA;
+    border-radius: 4px;
+    color: #000 !important;
+    font-weight: 600;
+}
+.form-check-input.checkToggle[type=checkbox] {
+    border-radius: 50px !important;
+    width: 40px !important;
+    height: 22px;
+    border: 2px solid #0d6efd;
+    cursor: pointer;
+}
